task6: Corrections